@@ -1,6 +1,5 @@
 package uk.gov.moj.cpp.progression.helper;
 
-import static java.util.Optional.of;
 import static java.util.UUID.fromString;
 import static java.util.UUID.randomUUID;
 import static javax.json.Json.createObjectBuilder;
@@ -14,16 +13,11 @@ import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 import static org.mockito.Mockito.when;
 import static uk.gov.justice.services.messaging.JsonEnvelope.envelopeFrom;
 import static uk.gov.justice.services.test.utils.core.reflection.ReflectionUtil.setField;
 import static uk.gov.moj.cpp.progression.helper.HearingNotificationHelper.HEARING_DATE_PATTERN;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.CJS_OFFENCE_CODE;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.LEGISLATION;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.LEGISLATION_WELSH;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.MODEOFTRIAL_CODE;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.OFFENCE_TITLE;
-import static uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService.WELSH_OFFENCE_TITLE;
 
 import uk.gov.justice.core.courts.Address;
 import uk.gov.justice.core.courts.CourtCentre;
@@ -46,7 +40,6 @@ import uk.gov.moj.cpp.progression.service.ListingService;
 import uk.gov.moj.cpp.progression.service.NotificationService;
 import uk.gov.moj.cpp.progression.service.ProgressionService;
 import uk.gov.moj.cpp.progression.service.RefDataService;
-import uk.gov.moj.cpp.progression.service.ReferenceDataOffenceService;
 import uk.gov.moj.cpp.progression.service.dto.HearingNotificationInputData;
 import uk.gov.moj.cpp.progression.service.payloads.AssociatedDefenceOrganisation;
 import uk.gov.moj.cpp.progression.service.payloads.DefenceOrganisationAddress;
@@ -66,7 +59,6 @@ import javax.json.Json;
 import javax.json.JsonObject;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.io.Resources;
 import org.junit.jupiter.api.BeforeEach;
@@ -78,6 +70,8 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
 
 @ExtendWith(MockitoExtension.class)
 public class HearingNotificationHelperTest {
@@ -132,9 +126,6 @@ public class HearingNotificationHelperTest {
     private Requester requester;
 
     @Mock
-    private ReferenceDataOffenceService referenceDataOffenceService;
-
-    @Mock
     private NotificationInfoJdbcRepository notificationInfoRepository;
 
     @Captor
@@ -157,12 +148,17 @@ public class HearingNotificationHelperTest {
     private UUID caseId;
     private UUID defendantId;
     private UUID hearingId;
+    private UUID offenceId1;
+    private UUID offenceId2;
+    private CourtCentre enrichedCourtCenter;
 
     @BeforeEach
-    public void initMocks() {
-        caseId = UUID.randomUUID();
-        defendantId = UUID.randomUUID();
-        hearingId = UUID.randomUUID();
+    void initMocks() {
+        caseId = randomUUID();
+        defendantId = randomUUID();
+        hearingId = randomUUID();
+        offenceId1 = randomUUID();
+        offenceId2 = randomUUID();
 
         final Address address = Address.address()
                 .withAddress1("testAddress1")
@@ -183,7 +179,7 @@ public class HearingNotificationHelperTest {
                 .withWelshLjaName("testWalesLja")
                 .withLjaName("ljaName")
                 .build();
-        final CourtCentre enrichedCourtCenter = CourtCentre.courtCentre()
+        enrichedCourtCenter = CourtCentre.courtCentre()
                 .withCourtHearingLocation("Burmimgham")
                 .withId(randomUUID())
                 .withLja((ljaDetails)).withName("Lavender Court")
@@ -203,19 +199,61 @@ public class HearingNotificationHelperTest {
 
     }
 
-
     @Test
-    public void sendHearingNotifications_EmailToAllRelevantParties() {
+    void sendHearingNotifications_EmailToAllRelevantParties() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
+                .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
+        when(progressionService.transformCourtCentreV2(any(), any())).thenReturn(CourtCentre.courtCentre().withValuesFrom(enrichedCourtCenter).withWelshCourtCentre(true).build());
+        when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
+                add("prosecutionCase", prosecutionCase)
+                .build()
+        ));
+
+        when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
+        AssociatedDefenceOrganisation associatedDefenceOrganisation = AssociatedDefenceOrganisation.associatedDefenceOrganisationBuilder()
+                .withOrganisationId(randomUUID())
+                .withAddress(DefenceOrganisationAddress.defenceOrganisationAddressBuilder()
+                        .withAddress1("addressLine1")
+                        .withAddress2("addressLine2")
+                        .withAddress3("addressLine3")
+                        .withAddress4("addressLine4")
+                        .withAddressPostcode("CR01JS")
+                        .build())
+                .withEmail("organisation@org.com")
+                .withOrganisationName("defence Organisation")
+                .build();
+        when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
+
+        hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
+
+        verify(notificationService, times(2)).sendEmail(any(), any(), any(), any(), any(), prosecutorEmailCapture.capture());
+        verify(documentGeneratorService, times(2)).generateNonNowDocument(any(), any(), any(), any(), any());
+
+    }
+
+    @Test
+    void sendHearingNotifications_EmailToAllRelevantParties_WhenCivilCaseExparteFalse() {
+
+        final UUID caseId = randomUUID();
+        final UUID defendantId = randomUUID();
+        final UUID hearingId = randomUUID();
+        final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
+        HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
+
+        final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase-civil-exparte-false.json")
+                .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -237,7 +275,6 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -247,17 +284,61 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_LetterToAllRelevantParties() {
+    void shouldNotSendHearingNotifications_NoNotificationSentToAllRelevantParties_WhenCivilCaseExparteTrue() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
+        final UUID hearingId = randomUUID();
+        final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
+        HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
+
+        final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase-civil-exparte-true.json")
+                .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
+                .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
+
+        when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
+                add("prosecutionCase", prosecutionCase)
+                .build()
+        ));
+
+        when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
+        AssociatedDefenceOrganisation associatedDefenceOrganisation = AssociatedDefenceOrganisation.associatedDefenceOrganisationBuilder()
+                .withOrganisationId(randomUUID())
+                .withAddress(DefenceOrganisationAddress.defenceOrganisationAddressBuilder()
+                        .withAddress1("addressLine1")
+                        .withAddress2("addressLine2")
+                        .withAddress3("addressLine3")
+                        .withAddress4("addressLine4")
+                        .withAddressPostcode("CR01JS")
+                        .build())
+                .withEmail("organisation@org.com")
+                .withOrganisationName("defence Organisation")
+                .build();
+        when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
+
+        hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
+
+        verifyNoInteractions(notificationService);
+        verify(documentGeneratorService, times(2)).generateNonNowDocument(any(), any(), any(), any(), any());
+
+    }
+
+
+    @Test
+    void sendHearingNotifications_LetterToAllRelevantParties() {
+
+        final UUID caseId = randomUUID();
+        final UUID defendantId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -278,7 +359,6 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -288,17 +368,18 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_LetterToDefendantOrganisation_EmailToProsecutor() {
+    void sendHearingNotifications_LetterToDefendantOrganisation_EmailToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -319,7 +400,6 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -332,11 +412,10 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_LetterToPersonDefendant_EmailToProsecutor() {
+    void sendHearingNotifications_LetterToPersonDefendant_EmailToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
@@ -353,7 +432,6 @@ public class HearingNotificationHelperTest {
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         AssociatedDefenceOrganisation associatedDefenceOrganisation = null;
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -366,17 +444,18 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_EmailToPersonDefendant_LetterToProsecutor() {
+    void sendHearingNotifications_EmailToPersonDefendant_LetterToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -387,7 +466,7 @@ public class HearingNotificationHelperTest {
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor-with-no-email.json")));
         AssociatedDefenceOrganisation associatedDefenceOrganisation = null;
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -400,11 +479,10 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_LetterToOrganisationDefendant_EmailToProsecutor() {
+    void sendHearingNotifications_LetterToOrganisationDefendant_EmailToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
@@ -421,7 +499,7 @@ public class HearingNotificationHelperTest {
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         AssociatedDefenceOrganisation associatedDefenceOrganisation = null;
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -434,11 +512,10 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_EmailToOrganisationDefendant_LetterToProsecutor() {
+    void sendHearingNotifications_EmailToOrganisationDefendant_LetterToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
@@ -455,7 +532,7 @@ public class HearingNotificationHelperTest {
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor-with-no-email.json")));
         AssociatedDefenceOrganisation associatedDefenceOrganisation = null;
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -468,17 +545,18 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_EmailToDefendantOrganisation_LetterToProsecutor() {
+    void sendHearingNotifications_EmailToDefendantOrganisation_LetterToProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -500,7 +578,7 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -513,17 +591,18 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_EmailToDefendantOrganisation_NoNotificationToCpsProsecutor() {
+    void sendHearingNotifications_EmailToDefendantOrganisation_NoNotificationToCpsProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -545,7 +624,7 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -556,17 +635,18 @@ public class HearingNotificationHelperTest {
     }
 
     @Test
-    public void sendHearingNotifications_LetterToDefendantOrganisation_NoNotificationToCpsProsecutor() {
+    void sendHearingNotifications_LetterToDefendantOrganisation_NoNotificationToCpsProsecutor() {
 
         final UUID caseId = randomUUID();
         final UUID defendantId = randomUUID();
-        final UUID materialId = randomUUID();
         final UUID hearingId = randomUUID();
         final ZonedDateTime hearingTime = ZonedDateTime.now().plusDays(5);
         HearingNotificationInputData inputData = getInputData(caseId, defendantId, TEMPLATE_NAME, hearingId, hearingTime);
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -587,7 +667,7 @@ public class HearingNotificationHelperTest {
                 .withOrganisationName("defence Organisation")
                 .build();
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -619,22 +699,13 @@ public class HearingNotificationHelperTest {
         return new StringToJsonObjectConverter().convert(response);
     }
 
-    private static JsonObject getOffence(final String modeoftrial) {
-        return Json.createObjectBuilder().add(LEGISLATION, "E12")
-                .add(LEGISLATION_WELSH, "123")
-                .add(OFFENCE_TITLE, "title-of-offence")
-                .add(WELSH_OFFENCE_TITLE, "welsh-title")
-                .add(MODEOFTRIAL_CODE, modeoftrial)
-                .add(CJS_OFFENCE_CODE, "British").build();
-    }
-
     private HearingNotificationInputData getInputData(final UUID caseId, final UUID defendantId, final String templateName, final UUID hearingId,
                                                       final ZonedDateTime hearingTime){
         final HearingNotificationInputData hearingNotificationInputData = new HearingNotificationInputData();
         hearingNotificationInputData.setHearingType(HEARING_TYPE);
-        hearingNotificationInputData.setCaseIds(ImmutableList.of(caseId));
-        hearingNotificationInputData.setDefendantIds(ImmutableList.of(defendantId));
-        hearingNotificationInputData.setDefendantOffenceListMap(ImmutableMap.of(defendantId, ImmutableList.of(randomUUID())));
+        hearingNotificationInputData.setCaseIds(List.of(caseId));
+        hearingNotificationInputData.setDefendantIds(List.of(defendantId));
+        hearingNotificationInputData.setDefendantOffenceListMap(ImmutableMap.of(defendantId, List.of(offenceId1,offenceId2)));
         hearingNotificationInputData.setTemplateName(templateName);
         hearingNotificationInputData.setHearingId(hearingId);
         hearingNotificationInputData.setHearingDateTime(hearingTime);
@@ -657,6 +728,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -665,7 +738,7 @@ public class HearingNotificationHelperTest {
         ));
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(null);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         // When
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
@@ -687,6 +760,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -695,7 +770,7 @@ public class HearingNotificationHelperTest {
         ));
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(null);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         // When
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
@@ -720,6 +795,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -728,7 +805,7 @@ public class HearingNotificationHelperTest {
         ));
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(null);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         // When
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
@@ -751,6 +828,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -759,7 +838,7 @@ public class HearingNotificationHelperTest {
         ));
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(null);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         // When
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
@@ -784,6 +863,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -792,7 +873,6 @@ public class HearingNotificationHelperTest {
         ));
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor.json")));
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(null);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
 
         // When
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
@@ -819,6 +899,8 @@ public class HearingNotificationHelperTest {
 
         final JsonObject prosecutionCase = FileUtil.jsonFromString(FileUtil.getPayload("progressioncase.json")
                 .replaceAll("%CASE_ID%", caseId.toString())
+                .replaceAll("OFFENCE_ID_1", offenceId1.toString())
+                .replaceAll("OFFENCE_ID_2", offenceId2.toString())
                 .replaceAll("%DEFENDANT_ID%", defendantId.toString()));
 
         when(progressionService.getProsecutionCaseDetailById(any(), any())).thenReturn(Optional.of(createObjectBuilder().
@@ -829,7 +911,7 @@ public class HearingNotificationHelperTest {
         when(refDataService.getProsecutor(any(), any(), any())).thenReturn(Optional.of(getPayload("prosecutor-with-no-email.json")));
         AssociatedDefenceOrganisation associatedDefenceOrganisation = null;
         when(defenceService.getDefenceOrganisationByDefendantId(any(), any())).thenReturn(associatedDefenceOrganisation);
-        when(referenceDataOffenceService.getOffenceById(any(), any(), any())).thenReturn(of(getOffence("trial")));
+
 
         hearingNotificationHelper.sendHearingNotificationsToRelevantParties(jsonEnvelope, inputData);
 
@@ -844,5 +926,20 @@ public class HearingNotificationHelperTest {
         assertThat(emailChannel.getPersonalisation(), notNullValue());
         assertThat(emailChannel.getPersonalisation().getAdditionalProperties().containsKey(HEARING_NOTIFICATION_DATE),is(true));
         assertThat(emailChannel.getPersonalisation().getAdditionalProperties().get(HEARING_NOTIFICATION_DATE), is(expectedUKTime));
+    }
+
+    @Test
+    @MockitoSettings(strictness = Strictness.LENIENT)
+    void shouldGetEarliestStartDateTimeNonNull() {
+        final ZonedDateTime nowTime = ZonedDateTime.now();
+        ZonedDateTime result = hearingNotificationHelper.getEarliestStartDateTime(nowTime);
+        assertThat("Europe/London", is(result.getZone().getId()));
+    }
+
+    @Test
+    @MockitoSettings(strictness = Strictness.LENIENT)
+    void shouldGetEarliestStartDateTimeNull() {
+        ZonedDateTime result = hearingNotificationHelper.getEarliestStartDateTime(null);
+        assertThat(null, is(result));
     }
 }
